# dystoretools

./: .env.example  .gitignore  AGENT.md  Makefile  README.md  chat元素.txt  docker-compose.yml  侧边栏.txt  顶部菜单栏.txt
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/dystore/: __init__.py  admin.py  main.py
backend/dystore/alerts/: dispatcher.py  rules.py
backend/dystore/analysis/: cluster.py  comment_worker.py
backend/dystore/auth/: cookie_import.py  events.py  expiry_detector.py  local_auth.py  login_flow.py  persistent_context.py  session_check.py
backend/dystore/cache/: redis.py
backend/dystore/chat/: __init__.py  agent.py  custom_agents.py  service.py  tools.py
backend/dystore/config/: pii_columns.yaml
backend/dystore/content/: generator.py
backend/dystore/core/: config.py  logging.py  settings_store.py
backend/dystore/db/: base.py  bootstrap_local_auth.py  session.py
backend/dystore/llm/: accounting.py  adapters.py  gateway.py  pii_scrub.py  types.py
backend/dystore/oceanengine/: client.py  oauth.py  report.py  service.py
backend/dystore/scheduler/: maintenance.py  scheduler.py
backend/dystore/scraper/: antidetect.py  engine.py  schema.py  spec_loader.py  (+1 more)
backend/migrations/: env.py
backend/scripts/: create_chat_readonly_user.sql
backend/tests/: conftest.py  test_chat_agent.py  test_chat_service.py  test_chat_tools.py  test_cookie_import.py  test_llm.py  test_llm_adapters.py  test_llm_registry.py  test_redis_namespace.py  test_scheduler.py  test_scraper_basics.py  test_smoke_db.py  test_sqlsandbox.py
(+197 files in other folders)
