[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dystore"
version = "0.1.0"
description = "Single-user Douyin merchant scraper + AI dashboard"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiomysql>=0.2.0",
  "cryptography>=42.0",
  "alembic>=1.13",
  "redis>=5.2",
  "apscheduler>=3.10",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "playwright>=1.47",
  "playwright-stealth>=1.0.6",
  "pyyaml>=6.0",
  "jsonpath-ng>=1.6",
  "jinja2>=3.1",
  "structlog>=24.4",
  "python-dotenv>=1.0",
  "websockets>=13.1",
  "tzdata>=2024.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-mock>=3.14",
  "types-PyYAML",
]

[tool.setuptools.packages.find]
include = ["dystore*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET", "TCH", "PT"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
